--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.10",
+    "ember-cli-pixelate-image": "git://github.com/cowboyd/ember-cli-pixelate-image",
     "ember-cli-sample-image-data": "git://github.com/cowboyd/ember-cli-sample-image-data",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
+    "emberx-slider": "1.0.1",
     "express": "^4.8.5"
   }
 }
