--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1",
     "pixelate": "*"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "~3.3.3"
   }
 }
