--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "pixelate": "*"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "~3.3.3"
   }
 }
