add md5 dependency

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "pixelate": "*"
+    "pixelate": "*",
+    "JavaScript-MD5": "~1.1.0"
   },
   "devDependencies": {
     "bootstrap-sass": "~3.3.3"
